@@ -445,9 +445,6 @@ class CTrigger extends CTriggerGeneral {
 			return count($triggers);
 		}
 
-		$triggerids = array_keys($triggers);
-		sort($triggerids);
-
 		foreach ($triggers as $trigger) {
 			$result[$trigger['triggerid']] = $trigger;
 		}
@@ -1792,8 +1789,6 @@ class CTrigger extends CTriggerGeneral {
 			if (isset($sqlParts['select']['hostname'])) {
 				$sqlParts['select']['hostname'] = 'h.name as hostname';
 			}
-
-			$sqlParts = $this->addQueryOrder('t.lastchange', $sqlParts, ZBX_SORT_DOWN);
 		}
 
 		return $sqlParts;
